--- a/docs/resources/css/style.css
+++ b/docs/resources/css/style.css
@@ -41,6 +41,12 @@
         margin-top: calc(100vh - var(--navbar-height));
     }
 
+    @media screen and (max-width: 922px) {
+        .content {
+            margin-top: 100vh;
+        }
+    }
+
 /* Navbar */
     :root {
         --navbar-height: 4rem
@@ -62,6 +68,7 @@
 
     .col-img-inf svg{
         height: 100%;
+        min-height: 300px;
     }
 
     .btn-per {
@@ -84,7 +91,6 @@
 
     .card-precios:hover {
         box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
-        transform: scale(1.1);
     }
 
     .card-head {
@@ -96,5 +102,16 @@
     }
 
     .footer {
-        background-color: #736B55;
+        background-color: #2b281f;
+    }
+
+    .footer-icons a{
+        color: white;
+    }
+
+
+    @media screen and (min-width: 922px) {
+        .card-precios:hover {
+            transform: scale(1.1);
+        }
     }
